# my-twitch-bot

./: .env.swo  .env.swp  .gitignore  .launcher_config  CLAUDE.md  LAUNCHER_GUIDE.md  ReadMe.MD  alembic.ini  bot.py  chat_listener.py  check_db_format.py  config.py  docker-compose.yml  et --hard <commit-hash>   generate_all_questions.py  launcher.py  leaderboard_commands.py  main.py  pyproject.toml  query_leaderboard.py  read_chat.py  remove_wronng_abilities.py  requirements.txt  start.bat  start.sh  start_web_dashboard.py  test_ask_command.py  test_irc.py  test_trivia.py
alembic/: env.py
data/: README.md  category_loader.py  category_mapping.py  data_loader.py  data_loader.py.bak  smite_gods_modified.json  trivia_categories.txt
db/: attempts.py  channel_users.py  channels.py  database.py  leaderboard.py  models.py  questions.py  sessions.py  trivia_handlers.py  users.py
docs/: README.md  TODO.md  WEB_DASHBOARD.md  leaderboard.md
generated_questions/: smite_ability_generated_20250829_052502_batch1.json  smite_ability_generated_20250829_052524_batch2.json  smite_ability_generated_20250829_053002_batch1.json  smite_ability_generated_20250829_053041_batch2.json  smite_ability_generated_20250829_053442_batch1.json  smite_ability_generated_20250829_053515_batch2.json  smite_ability_generated_20250829_053652_batch1.json  smite_ability_generated_20250829_053740_batch2.json  smite_ability_generated_20250829_053818_batch3.json  smite_ability_generated_20250829_053859_batch4.json  smite_ability_generated_20250829_053945_batch5.json  (+5 more)
init/: schema.sql
llm/: __init__.py  (+8 more)
(+69 files in other folders)
